# MLOps-Mini-Project

./: Makefile  README.md  dvc.yaml  mlflow.db  pyproject.toml
.dvc/: config
docs/: mkdocs.yml
docs/docs/: index.md
flask-app/: app.py  apps.py
mlruns/1/models/m-20a06148afb741a3b2c26bb2c94569e4/artifacts/: MLmodel
mlruns/1/models/m-3613eeed43fd42868013c5845a37e21e/artifacts/: MLmodel
mlruns/1/models/m-6fd4b56d911a490dbdc5131a8f7cdb1b/artifacts/: MLmodel
mlruns/1/models/m-7e557648920e48899616cb93a2c16bd1/artifacts/: MLmodel  requirements.txt
mlruns/1/models/m-8a9b8e21dd2e4e7ab4e6f7e91826d436/artifacts/: MLmodel  python_env.yaml
mlruns/1/models/m-a09e3e5095ea415c838ddd6fa9933371/artifacts/: MLmodel
mlruns/1/models/m-b67bb8e10a3748a6a75bcb74b131fe6c/artifacts/: MLmodel  conda.yaml
notebooks/: dagshub_setup.py  exp1_baseline_bowvs_tfidf  exp1_baseline_model.ipynb  exp3_lor_bow_hp.py
src/data/: data_preprocessing.py
src/features/: feature_engineering.py
src/model/: model_building.py  model_evaluation.py  register_model.py
