[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Mini-Projects"
version = "0.0.1"
description = "A mini project using MLOps"
authors = [
  { name = "Harsh" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "mkdocs",
    "pip",
    "python-dotenv",
    "ruff",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["Mini-Projects"]
include = ["pyproject.toml", "Mini-Projects/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Mini-Projects"]
force-sort-within-sections = true

