[project]
name = "mlops-mini-project"
version = "0.0.1"
description = "A mini project using MLOps"
authors = [
  { name = "Harsh" },
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "dagshub>=0.7.1",
    "dvc>=3.67.1",
    "mkdocs",
    "mlflow>=3.14.0",
    "nltk>=3.10.0",
    "pip",
    "python-dotenv",
    "ruff",
    "xgboost>=3.2.0",
]

# Tell uv to treat this strictly as an application, not a buildable package
[tool.uv]
package = false

[tool.ruff]
line-length = 99
src = ["src"] # Point to a generic source folder or your scripts folder
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true
